tests/ui/nll/user-annotations/region-error-ice-109072.stderr
error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/region-error-ice-109072.rs:8:9
   |
LL | impl Lt<'missing> for () {
   |     -   ^^^^^^^^ undeclared lifetime
   |     |
   |     help: consider introducing lifetime `'missing` here: `<'missing>`

error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/region-error-ice-109072.rs:9:15
   |
LL | impl Lt<'missing> for () {
   |     - help: consider introducing lifetime `'missing` here: `<'missing>`
LL |     type T = &'missing ();
   |               ^^^^^^^^ undeclared lifetime

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
